// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing components Should render City page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <a
          href="../Home.jsx"
        >
          <img
            alt="Back"
            class="icons links"
            src="left-arrow.png"
          />
        </a>
        <h4>
          Bangalore
          ' s Weather
        </h4>
        <div
          class="navIcons"
        >
          <img
            alt="Microphone"
            class="icons"
            src="microphone.png"
          />
          <img
            alt="Settings"
            class="icons setting"
            src="settings.png"
          />
        </div>
      </header>
      <section
        class="cityImg"
        style="background-image: url(bangalore.jpg);"
      >
        <h1>
          Bangalore
        </h1>
      </section>
      <section
        class="weatherDetails"
      >
        <h5
          class="detailHead"
        >
          Details
        </h5>
        <h4>
          Weather:  
          Sunny
        </h4>
        <h4>
          Temperature:  
          25
        </h4>
        <h4>
          Humidity:  
          8000
        </h4>
        <h4>
          Wind:  
          235
        </h4>
      </section>
    </div>
  </body>,
  "container": <div>
    <header>
      <a
        href="../Home.jsx"
      >
        <img
          alt="Back"
          class="icons links"
          src="left-arrow.png"
        />
      </a>
      <h4>
        Bangalore
        ' s Weather
      </h4>
      <div
        class="navIcons"
      >
        <img
          alt="Microphone"
          class="icons"
          src="microphone.png"
        />
        <img
          alt="Settings"
          class="icons setting"
          src="settings.png"
        />
      </div>
    </header>
    <section
      class="cityImg"
      style="background-image: url(bangalore.jpg);"
    >
      <h1>
        Bangalore
      </h1>
    </section>
    <section
      class="weatherDetails"
    >
      <h5
        class="detailHead"
      >
        Details
      </h5>
      <h4>
        Weather:  
        Sunny
      </h4>
      <h4>
        Temperature:  
        25
      </h4>
      <h4>
        Humidity:  
        8000
      </h4>
      <h4>
        Wind:  
        235
      </h4>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing components Should render Home page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <a
          href="../Home.jsx"
        >
          <img
            alt="Reload"
            class="icons links"
            src="reload.png"
          />
        </a>
        <h4>
          Karnataka Weather
        </h4>
        <div
          class="navIcons"
        >
          <img
            alt="Microphone"
            class="icons"
            src="microphone.png"
          />
          <img
            alt="Settings"
            class="icons setting"
            src="settings.png"
          />
        </div>
      </header>
      <section
        class="titleDiv"
      >
        <h1>
          Karnataka
        </h1>
        <p>
          One State, Many Worlds
        </p>
      </section>
      <section
        id="cities"
      >
        <h5
          class="citiesHead"
        >
          Cities
        </h5>
        <div
          class="citiesList"
        >
          <a
            class="links"
            href="../City.jsx"
          >
            <div
              class="city"
              style="background-image: url(bangalore.jpg);"
            >
              <img
                alt="Forward"
                class="icons"
                src="right-arrow.png"
              />
              <h3
                class="cityHead"
              >
                Bangalore
              </h3>
              <p>
                25
              </p>
            </div>
          </a>
          <a
            class="links"
            href="../City.jsx"
          >
            <div
              class="city"
              style="background-image: url(mysore.jpg);"
            >
              <img
                alt="Forward"
                class="icons"
                src="right-arrow.png"
              />
              <h3
                class="cityHead"
              >
                Mysore
              </h3>
              <p>
                30
              </p>
            </div>
          </a>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <header>
      <a
        href="../Home.jsx"
      >
        <img
          alt="Reload"
          class="icons links"
          src="reload.png"
        />
      </a>
      <h4>
        Karnataka Weather
      </h4>
      <div
        class="navIcons"
      >
        <img
          alt="Microphone"
          class="icons"
          src="microphone.png"
        />
        <img
          alt="Settings"
          class="icons setting"
          src="settings.png"
        />
      </div>
    </header>
    <section
      class="titleDiv"
    >
      <h1>
        Karnataka
      </h1>
      <p>
        One State, Many Worlds
      </p>
    </section>
    <section
      id="cities"
    >
      <h5
        class="citiesHead"
      >
        Cities
      </h5>
      <div
        class="citiesList"
      >
        <a
          class="links"
          href="../City.jsx"
        >
          <div
            class="city"
            style="background-image: url(bangalore.jpg);"
          >
            <img
              alt="Forward"
              class="icons"
              src="right-arrow.png"
            />
            <h3
              class="cityHead"
            >
              Bangalore
            </h3>
            <p>
              25
            </p>
          </div>
        </a>
        <a
          class="links"
          href="../City.jsx"
        >
          <div
            class="city"
            style="background-image: url(mysore.jpg);"
          >
            <img
              alt="Forward"
              class="icons"
              src="right-arrow.png"
            />
            <h3
              class="cityHead"
            >
              Mysore
            </h3>
            <p>
              30
            </p>
          </div>
        </a>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
